# SlimRasterCpp

./: CMakeLists.txt  README.md
src/: SlimRaster.h  bmp2image.cpp  bmp2texture.cpp  obj2mesh.cpp  slim.h
src/SlimRaster/: app.h
src/SlimRaster/core/: base.h  transform.h
src/SlimRaster/renderer/: common.h  mesh_shaders.h  pixel_shaders.h  rasterizer.h
src/SlimRaster/scene/: material.h  scene.h  selection.h  texture.h
src/SlimRaster/serialization/: texture.h
src/SlimRaster/viewport/: canvas.h  frustum.h  navigation.h  viewport.h
src/examples/: 1_clipping.cpp  2_normal_maps.cpp  3_mipmaps.cpp  suzanne_albedo.texture  suzanne_normal.texture
src/slim/core/: base.h  texture.h  transform.h
src/slim/math/: comp.h  fft.h
src/slim/renderer/: common.h  pixel_shaders.h  rasterizer.h
src/slim/scene/: camera.h  mesh.h  scene.h  selection.h
